# AVSD

./: README.md  environment.yml  pyproject.toml
scripts/code/: download_codeforces_cots_py.sh  train_avsd_code_deepseek_r1_distill_qwen_7b.sh  train_avsd_code_qwen3_8b.sh
scripts/math/: train_avsd_deepseek_r1_distill_qwen_7b.sh  train_avsd_qwen3_8b.sh
src/avsd/code/: download_codeforces_cots_py.py  evaluate_codeforces.py  prepare_code_views.py  schemas.py  train.py
src/avsd/code/data/: code_dataset.py  download_codeforces_cots_py.py  prepare_code_views.py
src/avsd/code/evaluation/: compute_metrics.py  eval_code.py
src/avsd/code/execution/: extract_code.py  feedback.py  run_tests.py  sandbox.py
src/avsd/code/prompts/: student_prompt.py  thinking.py  view_prompts.py
src/avsd/code/training/: code_collator.py  code_trainer.py  train_code.py  vllm_utils.py
src/avsd/common/: chat_template.py  multiview_distill.py
src/avsd/math/: data_collator.py  evaluate.py  privileged_views.py  train.py  trainer.py  training_datasets.py
